additional fields in config file

--- a/src/test/java/goral/resources/config.yaml
+++ b/src/test/java/goral/resources/config.yaml
@@ -7,20 +7,13 @@ header:
   first_name: Tomek
   last_name: Górski
   company_name: Firma Jana Rogala
+  country: Poland
   street: Karola Goduli i Dariusza Fóty
   building_number: "467"
   suite_number: "544"
   post_office: Chrząszczygrzebowice Kolonia
   postcode: 23-456
   city: Łękołody Stare
-
-header:
-  first_name: Tomek
-  last_name: Górski
-  company_name: Firma Jana Rogala
-  street: Karola Goduli i Dariusza Fóty
-  building_number: "467"
-  suite_number: "544"
-  post_office: Chrząszczygrzebowice Kolonia
-  postcode: 23-456
-  city: Łękołody Stare
+  email: tester@testowy.pl
+  phone: "603215114"
+  order_comments: Piękny komentarz można tu napisać i wsatwić w inputa
