--- a/src/test/java/goral/resources/config.yaml
+++ b/src/test/java/goral/resources/config.yaml
@@ -16,4 +16,4 @@ header:
   city: Łękołody Stare
   email: tester@testowy.pl
   phone: "603215114"
-  order_comments: Piękny komentarz można tu napisać i wsatwić w inputa
+  order_comments: Piękny komentarz można tu napisać i wstawić w inputa
